--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@
   --footer-background-color: #2f303a;
   --secondary-logo-color: #000000;
   --main-light-color: #ffffff;
+  --additional-title-color: rgba(47, 48, 58, 0.8);
+  --overlay-color: rgba(33, 150, 243, 0.9);
 }
 body {
   background-color: var(--primary-background-color);
@@ -121,6 +123,7 @@ img{
 }
 .header .nav-link {
   display: block;
+  position: relative;
   color: var(--main-title-color);
   font-weight: 500;
   font-size: 14px;
@@ -151,7 +154,52 @@ img{
 }
 .nav-link.current {
   color: var(--accent-color);
+  
 }
+.nav-link.current::after {
+  content: ' ';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+
+}
+/* .nav-link:after,
+.nav-link:after{
+  content: ' ';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  transform:scaleX(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  
+
+} */
+/* .nav-link:hover:after,
+.nav-link:focus:after{
+  content: ' ';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  transform:scaleX(1)
+} */
+
+
 .nav-box {
   margin-left: 93px;
 }
@@ -250,13 +298,35 @@ img{
   margin-bottom: 50px;
 }
 .field-action-item {
+  position: relative;
   width: calc((100%-60px) / 3);
   display: block;
   max-width: 100%;
   height: auto;
 }
+.field-add-title{
+  position: absolute;
+  display: block;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  background-color: var(--additional-title-color);
+  padding: 27px ;
+
+}
 .field-action.section {
   padding-top: 0;
+}
+.field-title{
+  
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--main-light-color);
 }
 .title {
   margin-bottom: 50px;
@@ -478,6 +548,8 @@ fill: var(--main-light-color);
 .example-cards {
   flex-basis: calc((100% - 60px) / 3);
   background-color: var(--main-light-color);
+  position: relative;
+  
   
 }
 .example-cards:hover{
@@ -571,4 +643,19 @@ box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
+  
+}
+
+.overlay{
+ position: absolute;
+
+  display: block;
+  width: 100%;
+  height: 294px;
+  top: 0;
+
+  background-color: var(--overlay-color) ;
+  color: var(--main-light-color);
+  /* transform: translateY(100%); */
+  
 }
