--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ img{
 .nav-link.current::after {
   content: ' ';
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   display: block;
   width: 100%;
@@ -601,6 +601,7 @@ box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   cursor: pointer;
   border: 1px solid transparent;
   border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .btn-secondary-type {
   padding: 6px 22px;
@@ -616,6 +617,7 @@ box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   border: 1px solid var(--secondary-backgroung-color);
   border-radius: 4px;
 
+  
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shodow 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 .btn-secondary-type:hover,
@@ -625,6 +627,7 @@ box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
 box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.08);
 box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+transform: color(var(--accent-color)) ;
 
 }
 .btn-secondary-type.current {
@@ -694,6 +697,9 @@ box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
   transform: translateY(0);
 }
 
+.example-card-link:focus .overlay{
+  transform: translateY(0);
+}
 .examples-overlay-text{
 font-size: 18px;
 line-height: 1.58
@@ -708,17 +714,23 @@ padding : 63px 24px;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) ; 
   
 }
 .backdrop.is-hidden{
   opacity: 0;
   pointer-events: none;
 }
+
+.backdrop.is-hidden .modal{
+  transform: translate(-50%, -50%) scale(0.9);
+}
 .modal{
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  
 
   
   width: 528px;
@@ -728,7 +740,10 @@ padding : 63px 24px;
   background-color: var(--primary-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  scale: 1.0;
 
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
   
 }
 .modal-icon{ 
